5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1582_1331.log
== TEST (2019-03-12 17:20:12) 
-- CODE:
g = 3
m = 50

gm=50//3 % 3

print(gm)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:20:14) 
-- CODE:
g = 3
m = 50

gm=50//3 % 3

print(gm)
-- EXECUTION TIME:
0.130772
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:20:21) 
-- CODE:
g = 3
m = 50

gm=50//3

print(gm)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:20:22) 
-- CODE:
g = 3
m = 50

gm=50//3

print(gm)
-- EXECUTION TIME:
0.145717
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:21:32) 
-- CODE:
g = 3
m = 50

gm=50//3

v=%gm

print(gm)

print(v)
-- EXECUTION TIME:
0.207802
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 6
    v=%gm
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:21:34) 
-- CODE:
g = 3
m = 50

gm=50//3

v=%gm

print(gm)

print(v)
-- ERROR:
File "XXXX", line 6
    v=%gm
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:21:42) 
-- CODE:
g = 3
m = 50

gm=50//3



print(gm)

print(v)
-- EXECUTION TIME:
0.164037
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 10, in <module>
    print(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:21:43) 
-- CODE:
g = 3
m = 50

gm=50//3



print(gm)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(v)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:23:46) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v= 1%gm

print(gm)
print(v)

-- EXECUTION TIME:
0.187367
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:23:47) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v= 1%gm

print(gm)
print(v)

-- OUTPUT:
16
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:26:41) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v= %gm

print(gm)
print(v)

-- ERROR:
File "XXXX", line 5
    v= %gm
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:27:02) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v= gm%1

print(gm)
print(v)

-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:27:03) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v= gm%1

print(gm)
print(v)

-- EXECUTION TIME:
0.141806
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:27:04) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v= gm%1

print(gm)
print(v)

-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:27:09) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v= gm%

print(gm)
print(v)

-- EXECUTION TIME:
0.129769
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 5
    v= gm%
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:27:10) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v= gm%

print(gm)
print(v)

-- ERROR:
File "XXXX", line 5
    v= gm%
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:28:20) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v=1
pq = v % gm

print(gm)
print(v)

-- OUTPUT:
16
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:28:27) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v=1
pq = v % gm

print(gm)
print(pq)

-- OUTPUT:
16
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:28:29) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v=1
pq = v % gm

print(gm)
print(pq)

-- EXECUTION TIME:
0.198284
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:28:31) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v=1
pq = v % gm

print(gm)
print(pq)

-- EXECUTION TIME:
0.204919
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:28:32) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v=1
pq = v % gm

print(gm)
print(pq)

-- EXECUTION TIME:
0.131097
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:28:32) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v=1
pq = v % gm

print(gm)
print(pq)

-- EXECUTION TIME:
0.180323
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:28:33) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v=1
pq = v % gm

print(gm)
print(pq)

-- EXECUTION TIME:
0.184052
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:28:33) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v=1
pq = v % gm

print(gm)
print(pq)

-- EXECUTION TIME:
0.140515
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:28:34) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v=1
pq = v % gm

print(gm)
print(pq)

-- EXECUTION TIME:
0.161906
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:28:43) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v=1
pq = gm % v

print(gm)
print(pq)

-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:28:45) 
-- CODE:
g = 3
m = 50

gm=(50//3)
v=1
pq = gm % v

print(gm)
print(pq)

-- EXECUTION TIME:
0.174009
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:29:48) 
-- CODE:
g = 3
m = 50
v=1

gm=(m//g)
pq = gm % v

print(gm)
print(pq)

-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:29:49) 
-- CODE:
g = 3
m = 50
v=1

gm=(m//g)
pq = gm % v

print(gm)
print(pq)

-- EXECUTION TIME:
0.196429
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:30:00) 
-- CODE:
g = 3
m = 50
v=1

gm=(m//g)
pq = v % gm

print(gm)
print(pq)

-- OUTPUT:
16
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:30:01) 
-- CODE:
g = 3
m = 50
v=1

gm=(m//g)
pq = v % gm

print(gm)
print(pq)

-- EXECUTION TIME:
0.131004
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:14) 
-- CODE:
g = 3
m = 50
v=1

m= m%3
gm=(m//g)

print(gm)
print(m)

-- OUTPUT:
0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:29) 
-- CODE:
g = 3
m = 50
v=1

o= m%3
gm=(m//g)

print(gm)
print(o)

-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:31:30) 
-- CODE:
g = 3
m = 50
v=1

o= m%3
gm=(m//g)

print(gm)
print(o)

-- EXECUTION TIME:
0.225361
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
